# openthread

./: .gitignore  .gitmodules  .travis.yml  Android.mk  BUILD.gn  CMakeLists.txt  DUCKHORN_BR_README.md  README_TOBLE.md  README_TOBLE_UNSECURELINK.md  README_TOBLE_UNSECURE_LINK.md  build.sh  component.mk  configure.ac  form-network.sh  make-daemon.sh  make-nrf5-cli-rcp.sh  make-nrf5-rcp-cli.sh  sysctl.sh
.github/workflows/: posix.yml  simulation-1.2.yml  simulation.yml  toranj.yml
etc/cmake/: options.cmake
etc/gn/: openthread.gni
examples/: Makefile-nrf52840  common-switches.mk
examples/apps/cli/: CMakeLists.txt
examples/apps/ncp/: CMakeLists.txt
include/openthread/: BUILD.gn  border_router.h  error.h  srp.h  srp_server.h  toble.h
include/openthread/platform/: ble.h  infra_if.h  logging.h  radio.h  toble.h  toolchain.h
script/: build-toble-android.sh  test
src/: CMakeLists.txt
src/cli/: BUILD.gn  CMakeLists.txt  Makefile.am  README.md  README_SRP_SERVER.md  README_TOBLE_PLATFORM.md  cli.cpp  cli.hpp  cli_srp_client.cpp  cli_srp_client.hpp  cli_srp_server.cpp  cli_srp_server.hpp  cli_toble.cpp  cli_toble.hpp  cli_toble_platform.cpp  cli_toble_platform.hpp  cli_uart.cpp  cli_udp.cpp
src/core/: BUILD.gn  CMakeLists.txt  Makefile.am  openthread-core-config.h
src/core/api/: border_router_api.cpp  srp_api.cpp  srp_server_api.cpp  toble_api.cpp
src/core/backbone_router/: backbone_tmf.cpp
src/core/border_router/: routing_manager.cpp  routing_manager.hpp  srp_server.cpp  srp_server.hpp
src/core/common/: extension_example.cpp  instance.cpp  instance.hpp  locator.hpp  logging.hpp  message.hpp  notifier.cpp  string.cpp  string.hpp
src/core/config/: border_router.h  ip6.h  logging.h  mle.h  openthread-core-config-check.h  openthread-core-default-config.h  toble.h
src/core/crypto/: ecdsa.hpp
src/core/mac/: mac_frame.hpp
src/core/meshcop/: border_agent.cpp  border_agent.hpp  commissioner.cpp  dtls.cpp  joiner.cpp  joiner_router.cpp  meshcop_tlvs.hpp
src/core/net/: dns_client.cpp  dns_headers.cpp  dns_headers.hpp  icmp6.cpp  ip6_filter.cpp  socket.hpp  srp_server.cpp  srp_server.hpp
src/core/radio/: radio.hpp  (+1 more)
src/freertos/: CMakeLists.txt  dummy.cpp  lwip_netif.cpp  ot_rtos_impl.cpp
src/freertos/include/openthread/: openthread-freertos.h
src/freertos/include/ot_rtos/: ot_rtos.h
src/ncp/: CMakeLists.txt  ncp_base.cpp
src/posix/: CMakeLists.txt  Makefile-posix  Makefile.am  daemon.cmake  main.c
(+98 files in other folders)
